Account popup alignment fixing

--- a/front-end/style.css
+++ b/front-end/style.css
@@ -1867,6 +1867,8 @@ select {
   font-size: 1vw;
   font-family: var(--text-font);
   font-weight: var(--bold-font);
+  position:relative;
+  z-index: 1;
 }
 
 .account-popup-data {
@@ -1882,6 +1884,7 @@ select {
   position: absolute;
   bottom: 0;
   left: 0;
+  z-index: 0;
 }
 
 .account-popup-button {
@@ -3201,17 +3204,7 @@ header .diary-fifth-current-date {
   font-size: 1vw;
 }
 
-.account-popup-inputs {
-  display: block;
-  width: 100%;
-  padding: 0.5vw 0.5vw 0.5vw 2.3vw;
-  outline: none;
-  border: 0.065vw solid rgb(255, 255, 255);
-  border-radius: 1.62vw;
-  margin-bottom: 1.5vw;
-  width: 17vw;
-  font-size: 1vw;
-}
+
 
 .signin-popup-line {
   border-right: 0.1vw solid var(--darkblue-color);
@@ -4207,6 +4200,62 @@ header .diary-fifth-current-date {
     width: 46.7vw;
     margin-top: 4vw;
   }
+  /* ------- Account popup Responsive ------- */
+  .account-popup-heading {
+    font-size: 3vw;
+}
+
+.account-popup-data {
+
+  font-size: 2vw;
+}
+
+.account-popup-inputs {
+
+  width: 48vw;
+  padding: 1.5vw 1vw 1.5vw 2vw;
+  outline: none;
+  border-radius: 4vw;
+  font-size: 2vw;
+  position:relative;
+  z-index: 1;
+}
+
+.account-popup-content {
+
+  width: 46vw;
+ 
+}
+
+.account-popup-button {
+ 
+  padding: 1vw 1vw 1vw 1.5vw;
+  border-radius: 4vw;
+ 
+
+  font-size: 2vw;
+  width: 16vw;
+
+}
+
+#account-popup-close {
+
+  top: 2vw;
+ 
+ 
+}
+
+.account-popup-wave {
+  width: 35vw;
+}
+
+#account-popup, #result-popup {
+  width: 60vw;
+  height: 50vw;
+
+}
+
+
 
   /* Responsive popup signin */
   .signin-popup {
@@ -4964,6 +5013,48 @@ header .diary-fifth-current-date {
     width: 3vw;
     height: 3vw;
   }
+
+
+  .account-popup-heading {
+    font-size: 3.5vw;
+}
+
+#account-popup-close {
+  position: absolute;
+  width: 3.5vw;
+}
+
+.account-popup-data {
+  font-size: 2.5vw;
+}
+
+
+.account-popup-inputs {
+
+  border-radius: 4vw;
+  font-size: 2.5vw;
+}
+
+
+.account-popup-content {
+  width: 46vw;
+}
+
+.account-popup-wave {
+  width: 40vw;
+}
+
+#account-popup, #result-popup {
+  width: 65vw;
+  height: 60vw;
+}
+
+.account-popup-content {
+  width: 46vw;
+  margin-top: 5vw;
+  margin-left: 10vw;
+}
+
 
   .payment-popup {
     width: 65vw;
@@ -5938,6 +6029,56 @@ header .diary-fifth-current-date {
     height: 5.3vw;
     margin-left: 0.6vw;
   }
+
+
+  .account-popup-heading {
+    font-size: 4vw;
+}
+#account-popup-close {
+
+  width: 4vw;
+}
+
+.account-popup-data {
+  font-size: 3vw;
+}
+
+.account-popup-inputs {
+  
+  font-size: 3vw;
+  width: 69vw;
+}
+
+.account-popup-every-inputs {
+  gap: 3vw;
+}
+
+.account-popup-content {
+  width: 67vw;
+  margin-top: 8vw;
+  margin-left: 10vw;
+}
+
+.account-popup-button {
+  padding: 1vw 1vw 1vw 1.5vw;
+  border-radius: 4vw;
+  font-size: 3vw;
+  width: 22vw;
+}
+
+.account-popup-wave {
+  width: 55vw;
+}
+#account-popup, #result-popup {
+  width: 85vw;
+  height: 80vw;
+}
+
+
+
+
+
+
 
   /*---- Popup login responsinve -------*/
 
